tests/paczka1/fuzzy1/54838362.err
Error in line 1: PF62nGR A396 79,5
Error in line 19: hSSPH S295 77,5
Error in line 18: A396 A396 61,9
Error in line 26: sIwk A396 Q,2
Error in line 24: A396 A550 64,9
